# 1st

./: .gitignore  AGENTS.md  CHATGPT-RESOURCES.md  README.md  hello.py  pyproject.toml  sanborn-investment-logic.md  test_hello.py
.cursor/: mcp.json
philosophy-with-llm/: README.md  episode-1.md
scripts/: __init__.py  download_us_daily.py
src/deribit_options/: __init__.py  __main__.py  core.py
src/wechat_scraper/: __init__.py  __main__.py  article.py  assets.py  export.py  mp_client.py  pdf.py
src/yield_curve/: __init__.py  __main__.py  core.py
tests/: test_deribit_options.py  test_download_us_daily.py  test_wechat_scraper.py  test_yield_curve.py
