[project]
name = "bond-yield-curve"
version = "0.1.0"
description = "Bond yield curve calculation module with a runnable demo."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "beautifulsoup4",
    "matplotlib",
    "numpy",
    "requests",
    "scipy",
]

[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
